# Newsreport_deep_search

./: README.md  agents_config.py  check_env.py  email_service.py  main.py  models.py  pyproject.toml  requirements.txt  research_pipeline.py  run_cli.py  run_web.py  test_email.py  test_web.py
src/: __init__.py
src/agents/: __init__.py  custom_agents.py
src/config/: agents_config.py
src/core/: email_service.py  research_pipeline.py
src/web/: web_interface.py  web_main.py
src/web/templates/: index.html  progress.html
